--- a/artist-gallery.html
+++ b/artist-gallery.html
@@ -39,7 +39,7 @@
             id: '1',
             name: 'Oscar de la Renta',
             desc: 'De la Renta became internationally known in the 1960s as one of the couturiers who dressed Jacqueline Kennedy.',
-            thumb: '/images/1.jpg',
+            thumb: 'artist-gallery_files/1.jpg',
             google: 'https://www.google.com/search?q=art+by+Oscar+de+la+Renta'
         }
      }">
@@ -69,7 +69,7 @@
             id: '2',
             name: 'Ilya Kuvshinov',
             desc: 'Ilya Kuvshinov  Russian illustrator based in Tokyo. character designs for Ghost in the Shell: SAC 2045 (series, bad reviews) and The Wonderland (2019)',
-            thumb: '/images/2.jpg',
+            thumb: 'artist-gallery_files/2.jpg',
             google: 'https://www.google.com/search?q=art+by+Ilya+Kuvshinov'
         }
      }">
@@ -101,7 +101,7 @@
             id: '3',
             name: 'Hayao Miyazaki',
             desc: 'creator of Japanese animated feature films, one of the most accomplished filmmakers in the history of animation.',
-            thumb: '/images/3.jpg',
+            thumb: 'artist-gallery_files/3.jpg',
             google: 'https://www.google.com/search?q=art+by+Hayao+Miyazaki'
         }
      }">
@@ -131,7 +131,7 @@
             id: '4',
             name: 'Daniel gerhartz',
             desc: 'born in 1965, a remarkable figure of American Kitsch',
-            thumb: '/images/4.jpg',
+            thumb: 'artist-gallery_files/4.jpg',
             google: 'https://www.google.com/search?q=art+by+Daniel+gerhartz'
         }
      }">
@@ -161,7 +161,7 @@
             id: '5',
             name: 'Henry Clive',
             desc: 'American, active 1925-1950, graphic artist and illustrator who created illustrations for The American Weekly and cover series, which were posed for by screen celebrities.',
-            thumb: '/images/5.jpg',
+            thumb: 'artist-gallery_files/5.jpg',
             google: 'https://www.google.com/search?q=art+by+Henry+Clive'
         }
      }">
@@ -193,7 +193,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '6',
             name: 'Frank Xavier Leyendecker',
             desc: 'commercial artist and illustrator. magazine cover art for Vogue, Vanity Fair, and Life, artwork for advertisers.',
-            thumb: '/images/6.jpg',
+            thumb: 'artist-gallery_files/6.jpg',
             google: 'https://www.google.com/search?q=art+by+Frank+Xavier+Leyendecker'
         }
      }">
@@ -223,7 +223,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '7',
             name: 'Ethel Hays',
             desc: 'cartoonist, flapper-themed comic strips, 1920s and 1930s. Art Deco style. In the 1940s and 1950s, children\'s book illustrator.',
-            thumb: '/images/7.jpg',
+            thumb: 'artist-gallery_files/7.jpg',
             google: 'https://www.google.com/search?q=art+by+Ethel+Hays'
         }
      }">
@@ -253,7 +253,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '8',
             name: 'Erté',
             desc: '20th-century Russian-born French artist and designer. fashion, graphic arts, etc.',
-            thumb: '/images/8.jpg',
+            thumb: 'artist-gallery_files/8.jpg',
             google: 'https://www.google.com/search?q=art+by+Ert%C3%A9'
         }
      }">
@@ -283,7 +283,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '9',
             name: 'George Barbier',
             desc: 'French illustrator of the early 20th century.',
-            thumb: '/images/9.jpg',
+            thumb: 'artist-gallery_files/9.jpg',
             google: 'https://www.google.com/search?q=art+by+George+Barbier'
         }
      }">
@@ -313,7 +313,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '10',
             name: 'Tom Bagshaw',
             desc: 'highly rendered digital painting style, portraying women, themes of fantasy, beauty, and mysticism',
-            thumb: '/images/10.jpg',
+            thumb: 'artist-gallery_files/10.jpg',
             google: 'https://www.google.com/search?q=art+by+Tom+Bagshaw'
         }
      }">
@@ -343,7 +343,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '11',
             name: 'Picasso',
             desc: 'Cubism, Surrealism, Modern art, Picasso\'s Blue Period',
-            thumb: '/images/11.jpg',
+            thumb: 'artist-gallery_files/11.jpg',
             google: 'https://www.google.com/search?q=art+by+Picasso'
         }
      }">
@@ -373,7 +373,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '12',
             name: 'kusama',
             desc: 'surrealism, Art Brut, pop art, abstract expressionism',
-            thumb: '/images/12.jpg',
+            thumb: 'artist-gallery_files/12.jpg',
             google: 'https://www.google.com/search?q=art+by+kusama'
         }
      }">
@@ -403,7 +403,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '13',
             name: 'Alphonse Mucha',
             desc: 'Czech painter, illustrator, and graphic artist. Art Nouveau, symbolist',
-            thumb: '/images/13.jpg',
+            thumb: 'artist-gallery_files/13.jpg',
             google: 'https://www.google.com/search?q=art+by+Alphonse+Mucha'
         }
      }">
@@ -433,7 +433,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '14',
             name: 'Thomas Kinkade',
             desc: 'American painter of popular realistic, pastoral, and idyllic subjects.',
-            thumb: '/images/14.jpg',
+            thumb: 'artist-gallery_files/14.jpg',
             google: 'https://www.google.com/search?q=art+by+Thomas+Kinkade'
         }
      }">
@@ -463,7 +463,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '15',
             name: 'Andrew Atroshenko',
             desc: 'figurative art portrays beautiful women, music and dance. Romantic impressionist.',
-            thumb: '/images/15.jpg',
+            thumb: 'artist-gallery_files/15.jpg',
             google: 'https://www.google.com/search?q=art+by+Andrew+Atroshenko'
         }
      }">
@@ -493,7 +493,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '16',
             name: 'James Jean',
             desc: 'bold, vibrant hues',
-            thumb: '/images/16.jpg',
+            thumb: 'artist-gallery_files/16.jpg',
             google: 'https://www.google.com/search?q=art+by+James+Jean'
         }
      }">
@@ -523,7 +523,7 @@ Weekly and cover series, which were posed for by screen celebrities.
             id: '17',
             name: 'Mark Ryden',
             desc: 'painter of the Lowbrow art movement. pop surrealism',
-            thumb: '/images/17.jpg',
+            thumb: 'artist-gallery_files/17.jpg',
             google: 'https://www.google.com/search?q=art+by+Mark+Ryden'
         }
      }">
